public/styles/style.css
:root {
  --deep-champagne: #ebce97ff;
  --antique-bronze: #656236ff;
  --wheat: #eed59eff;
  --moss-green: #909c52ff;
  --main-text: black;
  --secondary-bg: #f3e1bf;
  --shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  --main-border: 1px solid var(--antique-bronze);
  --main-border-radius: 7px;
}

/* general page styling */
body {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
  background-color: var(--deep-champagne);
  font-family: 'Karla', 'Inter', sans-serif;
  color: var(--main-text);
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 95vw;
  height: 8rem;
  margin: 1.25rem auto;
  text-align: center;
  box-shadow: var(--shadow);
  border: var(--main-border);
  border-radius: var(--main-border-radius);
}

.button {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 12rem;
  height: 3.8rem;
  margin: auto;
  background-color: var(--moss-green);
  border: var(--main-border);
  border-radius: 100px/80px;
  font-size: 1.75rem;
  font-weight: bolder;
}
span {
  font-weight: bolder;
  text-decoration: underline;
}
p {
  font-weight: 500;
  padding: 0px 3px;
}

/* home screen styling */
.header,
.footer {
  display: flex;
  align-items: center;
  width: 95vw;
  height: 4.75rem;
  background-color: var(--moss-green);
  border: var(--main-border);
  border-radius: var(--main-border-radius);
  box-shadow: var(--shadow);
  margin: 0.5rem auto;
}
.header-title {
  font-size: 3.5rem;
  text-align: center;
  text-shadow: var(--shadow);
  margin: auto;
}

.hero {
  display: flex;
  justify-content: space-between;
  width: 98vw;
  height: 23rem;
  margin: 1.875rem auto;
}
.panda-img {
  width: 9.375rem;
  margin-left: 0.625rem;
}
.speech-img {
  width: 14.1rem;
  background-image: url('../images/speech-bubbles.png');
  background-repeat: no-repeat;
}

.description,
.how-to-play {
  background: var(--secondary-bg);
}
.description p {
  font-size: 1.1rem;
  margin: 0.375rem auto;
}

.play-btn {
  margin: 3rem auto;
}
.play-btn a {
  text-decoration: none;
  color: var(--main-text);
}
.play-btn img {
  width: 1.375rem;
  height: 1.31rem;
  transform: rotate(90deg);
  margin-left: 0.95rem;
}

.footer {
  font-size: 1.2rem;
  justify-content: space-evenly;
  height: 2.1rem;
  margin-top: 1.1rem;
}
span#footer-date {
  font-weight: 500;
}
.links {
  display: flex;
}
.links a {
  display: flex;
  align-items: center;
  margin: 0 0.5rem;
}

/* game play html styling */
.how-to-play {
  margin: 0.5rem auto;
  height: 9.125rem;
  text-align: center;
  font-size: 1.05rem;
}
/* input container */
.word-box {
  margin: 2rem auto 0.65rem auto;
  height: 2.25rem;
  background-color: white;
  overflow-x: auto;
}
#word {
  width: 100%;
  border: none;
  text-align: center;
  letter-spacing: 1.1px;
  font-size: 1.5rem;
}

/* answer container */
.answer-box {
  height: 16rem;
  margin: 0.65rem auto 1rem auto;
  border: none;
  box-shadow: none;
}
#btn-answers {
  width: 95%;
  display: flex;
  flex-direction: column;
  flex: 1;
  gap: 1rem;
  margin: 0.3125rem;
  padding: 0;
  font-size: 1rem;
  pointer-events: none;
}

.btn-answer {
  display: flex;
  align-items: center;
  gap: 1rem;
  height: 3rem;
  padding: 3px 5px;
  text-align: justify;
  font-weight: 700;
  background: #ffffff;
  border-radius: var(--main-border-radius);
  box-shadow: var(--shadow);
}

.answer-txt {
  text-overflow: ellipsis;
  text-decoration: none;
  line-height: 1.2rem;
  overflow: hidden;
  width: calc(90%);
  white-space: nowrap;
  display: inline-block;
  padding: 3px;
  margin: 0;
  cursor: pointer;
  pointer-events: auto;
}
.answer-txtShow {
  white-space: break-spaces;
}
.btn-answerShow {
  height: fit-content;
}
.overflow-btn {
  width: 3.5rem;
  height: 1.5rem;
  font-size: 0.5rem;
  cursor: pointer;
  pointer-events: auto;
}

.actual-answer {
  border: 5px solid rgba(42, 117, 50, 0.6);
}
.correct-answer {
  background-color: rgba(42, 117, 50, 0.4);
}
.incorrect-answer {
  background-color: rgba(255, 0, 0, 0.4);
}

.bottom-page {
  display: flex;
  flex-direction: column;
}

/* button container and image */
.bottom-box {
  display: flex;
  height: 13rem;
  margin: 0.65rem;
  border: none;
  box-shadow: none;
}
.next-btn,
.end-btn {
  width: 6.5rem;
  height: 3rem;
  font-size: 1rem;
  cursor: pointer;
}
.end-btn a {
  text-decoration: none;
  color: var(--main-text);
}
.panda2 {
  margin-top: 2.75rem;
}
.panda2 img {
  height: 10.9rem;
}

/* start of media queries */
@media (max-width: 360px) {
  .header-title {
    font-size: 3rem;
  }
  .hero {
    width: 100vw;
  }
  .description p {
    font-size: 1.02rem;
  }
}
@media (max-width: 395px) {
  .how-to-play {
    font-size: 0.98rem;
  }
  .word-box {
    margin: 1rem auto 0.65rem auto;
  }
}

@media (min-width: 768px) {
  body {
    width: 95vw;
    margin: auto;
    font-size: 1.25rem;
  }
  .container {
    width: 95%;
    margin: 0.5rem auto 1rem auto;
  }

  /* home screen styling */
  .header {
    width: 95%;
  }
  .header-title {
    font-size: 4.5rem;
  }

  .hero {
    width: 90%;
    height: 29rem;
  }
  .speech-img {
    width: 82%;
    background-repeat: round;
  }
  .description {
    margin: 1rem auto;
  }
  .description p {
    margin: 0.7rem;
    font-size: 1.65rem;
  }

  .play-btn {
    margin: 3rem auto;
  }

  .footer {
    position: absolute;
    bottom: 0.5rem;
    width: 95%;
    height: 3rem;
    font-size: 2rem;
  }

  /* game play styling */
  .how-to-play {
    font-size: 1.36rem;
    margin: 1rem auto;
  }
  .word-box {
    height: 3rem;
    margin: 1rem;
    align-self: center;
  }
  #word {
    font-size: 1.875rem;
  }
  .answer-box {
    height: 18.1875rem;
  }
  #answers {
    font-size: 1.5rem;
    height: 90%;
  }
  li {
    display: flex;
    align-items: center;
    height: 3rem;
  }
  .bottom-page {
    margin: 0;
    gap: 1rem;
  }
  .bottom-box {
    display: flex;
    margin: 1.75rem;
    height: 22rem;
    gap: 5rem;
  }
  .next-btn,
  .end-btn {
    margin: 4.5rem auto;
    width: 12rem;
    height: 3.8rem;
    font-size: 1.75rem;
  }
  .panda2 img {
    height: auto;
  }
}

@media (min-width: 1024px) {
  li:hover {
    background-color: #ddd;
  }
  .noHover {
    pointer-events: none;
  }
  .next-btn:hover,
  .play-btn:hover {
    background-color: var(--wheat);
  }
  .end-btn:hover {
    background-color: red;
  }
  .links img {
    height: 2.125rem;
  }
}

